@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.9-1
-Date: 2012-07-17
+Date: 2012-07-18
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
