@@ -115,7 +115,6 @@ export("+.section",
        oceEdit,
        oceFilter,
        oce.plot.ts,
-       oce.plot.sticks,
        oceSmooth,
        oceSpectrum,
        oce.write.table,
@@ -127,6 +126,7 @@ export("+.section",
        pitch,
        "pitch<-",
        plotInset,
+       plotSticks,
        plotTS,
        plotScan,
        plotProfile,
@@ -180,7 +180,6 @@ export("+.section",
        sigmaTheta,
        silicate,
        "silicate<-",
-       stickplot,
        subset.oce,
        summary.ctd,
        summary.echosounder,
